// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip[Base] should render correctly  1`] = `
<div>
  <noscript />
  <button
    class="cvrrn77 soui-button-primary c871ech soui-button-button"
    type="button"
  >
    <span>
      hover me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly  2`] = `
<div>
  <noscript />
  <button
    class="cvrrn77 soui-button-primary c871ech soui-button-button"
    type="button"
  >
    <span>
      click me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly  3`] = `
<div>
  <noscript />
  <span
    class="c-mo579l soui-tooltip-target"
    style="cursor: not-allowed;"
  >
    <button
      class="c5wkfol soui-button-secondary c871ech soui-button-button ce9tjl7 soui-button-disabled"
      disabled=""
      style="pointer-events: none;"
      type="button"
    >
      <span>
        Disabled
      </span>
    </button>
  </span>
</div>
`;
